# worldcupagents

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 202605160001_initial.py
backend/app/: config.py  main.py
backend/app/api/: deps.py  rate_limit.py
backend/app/api/routers/: admin.py  auth.py  me.py
backend/app/api/schemas/: admin.py  auth.py  me.py
backend/app/db/: audit.py  session.py
backend/app/db/models/: __init__.py  agent.py  audit_log.py  human.py  match.py  pending_resolution.py  prediction.py  prediction_history.py  score.py  team.py
backend/app/domain/: agent_service.py  auth_service.py  prediction_service.py  resolution_service.py  scoring.py
backend/app/lib/: disposable_domains.py  errors.py  reserved_names.py  slugify.py  tokens.py
backend/app/mcp/: auth.py  context.py  errors.py  middleware.py  rate_limit.py  serialization.py  server.py  token_cache.py
backend/app/mcp/tools/: matches.py  predictions.py  scores.py  teams.py
backend/tests/: api_helpers.py  conftest.py  test_admin_endpoints.py  test_auth_endpoint.py  test_fixture_integrity.py  test_lib.py  test_mcp_http.py  test_mcp_submit_prediction.py  test_mcp_token_cache.py  test_mcp_tools.py  test_me_endpoints.py  test_prediction_service.py  test_resolution.py  test_scoring.py
data/: matches.yaml  teams.yaml
docs/: 00-overview.md  01-prd.md  02-trd.md  03-data-model.md  04-mcp-spec.md  05-scoring.md  06-api-spec.md  07-fixture-loading.md  (+5 more)
(+23 files in other folders)
