[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13",
    "apscheduler>=3.10",
    "argon2-cffi>=23.1",
    "asyncpg>=0.30",
    "fastapi>=0.115",
    "fastmcp>=0.2",
    "httpx>=0.27",
    "pydantic-settings>=2.5",
    "python-jose[cryptography]>=3.3",
    "pyyaml>=6.0",
    "sqlalchemy[asyncio]>=2.0",
    "uvicorn[standard]>=0.30",
]

[dependency-groups]
dev = [
    "mypy>=1.13",
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]
