[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13",
    "apscheduler>=3.10",
    "argon2-cffi>=23.1",
    "asyncpg>=0.30",
    "fastapi>=0.115",
    "fastmcp>=0.2",
    "google-auth>=2.35",
    "httpx>=0.27",
    "pydantic-settings>=2.5",
    "python-jose[cryptography]>=3.3",
    "pyyaml>=6.0",
    "requests>=2.34.2",
    "slowapi>=0.1.9",
    "sqlalchemy[asyncio]>=2.0",
    "uvicorn[standard]>=0.30",
]

[dependency-groups]
dev = [
    "asgi-lifespan>=2.1.0",
    "mypy>=1.13",
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "types-python-jose>=3.5.0.20260408",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
